AC_PREREQ([2.69])
AC_INIT([nagios-plugin], [0.96], [spaghetty@gmail.com])
AC_CONFIG_AUX_DIR(config)
m4_include([config/golang.m4])
AM_INIT_AUTOMAKE(foreign tar-ustar)
# Checks for programs.
AC_PROG_INSTALL
CHECK_GOLANG

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])
AC_OUTPUT
